# EMERGENCY-DETECTOR

./: LICENSE  README.md  demo.py  download_model.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: audio.py  config.py  detector.py  keywords.py  main.py
tests/: test_audio.py  test_detector.py
