[tool.poetry]
name = "vosk-emergency-detector"
version = "0.1.0"
description = "An AI Voice Keyword Detection System using Vosk for emergency keywords."
authors = ["JATIN"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
vosk = "^0.3.30"
sounddevice = "^0.4.1"
playsound = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
